--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ind_heart",
   "main": "index.tsx",
-  "version": "1.0.6",
+  "version": "1.0.13",
   "scripts": {
     "start": "expo start --dev-client",
     "reset-project": "node ./scripts/reset-project.js",
@@ -37,6 +37,7 @@
     "expo-haptics": "~14.0.0",
     "expo-linear-gradient": "~14.0.1",
     "expo-linking": "~7.0.3",
+    "expo-media-library": "^17.0.6",
     "expo-router": "~4.0.9",
     "expo-secure-store": "~14.0.0",
     "expo-sharing": "~13.0.0",
